--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ body {
     font-size: 1rem;
     color: #445361;
     position: relative;
-    left: -.5em;
+    left: -0.5em;
 }
 
 .btn--blue {
@@ -252,4 +252,3 @@ body {
     }
 
 }
-
